--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
+    compileSdkVersion 31
     buildToolsVersion "22.0.1"
 
     defaultConfig {
         applicationId "com.sheeper.foctupus"
         minSdkVersion 14
-        targetSdkVersion 23
+        targetSdkVersion 31
         versionCode 3
         versionName "1.02"
     }
@@ -23,6 +23,6 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    testImplementation 'junit:junit:4.12'
 }
